[gd_scene load_steps=12 format=2]

[ext_resource path="res://IntroScreen.gd" type="Script" id=1]
[ext_resource path="res://ColorRect.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/calibri.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://slides/img/shared/particles/glitch.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]

size = 80
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 1040, 580, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.4
angular_velocity = 360.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 90.0
angle_random = 0.0
scale = 2.0
scale_random = 1.0
color = Color( 0.472656, 0, 0.232635, 1 )
hue_variation = 0.4
hue_variation_random = 1.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 1.0
anim_offset_random = 1.0
anim_loop = false
_sections_unfolded = [ "Animation", "Color", "Emission Shape", "Hue Variation" ]

[sub_resource type="Curve" id=3]

min_value = -360.0
max_value = 360.0
bake_resolution = 100
_data = [ Vector2( 0, -239.766 ), 0.0, 0.0, 0, 0, Vector2( 1, 278.438 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

width = 2048
curve = SubResource( 3 )

[sub_resource type="Gradient" id=5]

offsets = PoolRealArray( 0, 0.35503, 0.863905, 1 )
colors = PoolColorArray( 0.769531, 0.74182, 0.0601196, 1, 0.215199, 0.103592, 0.855469, 1, 0.144196, 0.878906, 0.534511, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]

gradient = SubResource( 5 )
width = 2048

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 200
emission_shape = 2
emission_box_extents = Vector3( 800, 400, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 600.0
initial_velocity_random = 0.4
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 90.0
angle_random = 0.0
angle_curve = SubResource( 4 )
scale = 0.6
scale_random = 1.0
color_ramp = SubResource( 6 )
hue_variation = 1.0
hue_variation_random = 1.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Animation", "Emission Shape", "Hue Variation", "Trail" ]

[node name="IntroScreen" type="Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
DEBUG = false

[node name="ColorRect" type="ColorRect" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.0875244, 0.596488, 0.933594, 1 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="ColorRect"]

playback_process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="Text" type="Node" parent="."]

[node name="Main" type="Label" parent="Text"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -670.0
margin_top = -130.0
margin_right = 670.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "C'est un peu plus long que pr√©vu, mais cela ne devrait plus trop tarder"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 6.0
one_shot = false
autostart = true

[node name="Tween" type="Tween" parent="."]

playback_process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="TextTween" type="Tween" parent="."]

playback_process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Glitch" type="Particles2D" parent="."]

visible = false
position = Vector2( 950, 550 )
emitting = false
amount = 8
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.1
randomness = 1.0
fixed_fps = 4
fract_delta = false
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 2 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 4
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Visibility" ]

[node name="TrailingSquares" type="Particles2D" parent="."]

position = Vector2( 500, 550 )
emitting = true
amount = 1000
lifetime = 2.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 1.0
fixed_fps = 20
fract_delta = false
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 7 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 4
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time", "Visibility" ]

[connection signal="tween_completed" from="ColorRect/Tween" to="ColorRect" method="_on_Tween_tween_completed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]

[connection signal="tween_completed" from="TextTween" to="." method="_on_TextTween_tween_completed"]


